--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,6 @@ html, body {
 }
 
 .main {
-    height: 100%;
     background-color: aqua;
     flex: 4;
     background: #141332;
@@ -127,13 +126,13 @@ html, body {
 
 .main-dashboard {
     display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 columns with equal width */
+    grid-template-columns: repeat(5, 1fr); /* 4 columns with equal width */
     grid-template-rows: auto auto; /* 2 rows with auto height */
     gap: 20px; /* Adjust the gap as needed */
 }
 
 .dashboard-total {
-    margin: 30px 0px 20px 0px;
+    margin: 30px 0px 0px 0px;
     border-radius: 15px;
     background: #1D1D41;
     padding: 10px;
@@ -186,6 +185,9 @@ html, body {
     border-radius: 15px;
     display: flex;
     flex-direction: column;
+    grid-column: span 2;
+    max-height: 60vh;
+    padding: 2vh;
 }
 
 #dashboard-percentage-chart p {
@@ -202,14 +204,39 @@ html, body {
 #transaction-box {
     background: #1D1D41;
     border-radius: 15px;
-    padding: 2vw;
-    grid-column: span 2;
+    padding: 5vh;
+    grid-column: span 3;
+    height: 54vh;
  }
 
  .transaction {
     border: 1px solid black;
-    padding: 10px;
+    padding: 15px;
     border-radius: 10px;
+    font-size: 1.4rem;
  }
+
+ .transaction-table {
+    max-height: 35vh;
+    overflow: hidden; 
+    overflow-y: scroll;
+ }
+
+ .tr-table-element {
+    padding: 10px;
+    font-size: 1.2rem;
+    margin: 10px 0 10px 5px;
+ }
+
+ table {
+    width: 100%;
+    border-collapse: separate;
+    border-spacing: 0 1.3rem; /* Adjust the vertical and horizontal spacing as needed */
+  }
+
+  thead tr {
+    font-size: 1.3rem;
+    color: #AEABD8;
+  }
 
  
